--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Angeliki (Kelly) Loukatou</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -44,15 +44,13 @@
                         <span class="text-primary">Taylor</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I'm an enthusiastic and committed research engineer, working at the R&D Centre of EDF Energy UK. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team. I also hold a PhD in battery storage, which was completed in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://angelikilk.github.io/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/angelikilk?lang=en"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,35 +61,35 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Research Engineer</h3>
+                            <div class="subheading mb-3">EDF Energy UK R&D</div>
+                            <p> Main tasks include: Engaging with various units across the business to gather data and project requirements, Responsible for developing optimisation Python tools to optimally value energy storage assets co-located with renewable generation, when participating in various electricity markets -- examples include day-ahead and intraday markets, frequency response markets and high non-energy cost avoidance, Workflow automation, integration and data management of existing forecasting tools (data scrapping, database record manipulation, shell/batch scripting, deployment in AWS, testing in operational conditions),  Data collection and analysis of electricity price profiles, used to better inform arbitrage strategies for energy storage assets.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Modelling Analyst</h3>
+                            <div class="subheading mb-3">Energy Systems Catapult</div>
+                            <p>TBF.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2019 - May 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Postgraduate Researcher</h3>
+                            <div class="subheading mb-3">Centre for Doctoral Training in Power Networks, The University of Manchester</div>
+                            <p>TBF.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2014 - February 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Teaching Assistant</h3>
+                            <div class="subheading mb-3">School of Mathematics, The University of Manchester</div>
+                            <p>TBF.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2016 - February 2019</span></div>
                     </div>
                 </div>
             </section>
