--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Clarence
-                        <span class="text-primary">Taylor</span>
+                        <span class="text-primary">Loukatou</span>
                     </h1>
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
