--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p class="lead mb-5">I'm an enthusiastic and committed research engineer, working at the R&D Centre of EDF Energy UK. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team. I also hold a PhD in battery storage, which was completed in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://angelikilk.github.io/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/angelikilk?lang=en"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
