--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Volunteering</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Conferences</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Presentations</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
@@ -162,15 +162,27 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
+            <!-- Volunteering-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I am a yoga addict, and I like walking and running in sea and residential areas, as well as visiting bookshops!</p>
-                    <p class="mb-0">When forced indoors, I knit or spent my free time exploring the latest technology advancements in energy storage or data science.</p>
+                    <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Prokect Manager of Cigre WiE</p>
                 </div>
             </section>
-            <hr class="m-0" />
+            <!-- Presentations-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>TBF.</p>
+                </div>
+            </section>
+            <!-- Blogs-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Coming soon!</p>
+                </div>
+            </section>
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
@@ -191,6 +203,15 @@
                     </ul>
                 </div>
             </section>
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>I am a yoga addict, and I like walking and running in sea and residential areas, as well as visiting bookshops!</p>
+                    <p class="mb-0">When forced indoors, I knit or spent my free time exploring the latest technology advancements in energy storage or data science.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
