--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Volunteering</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Presentations</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#presentations">Presentations</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blogs">Blogs</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
