--- a/index.html
+++ b/index.html
@@ -165,21 +165,21 @@
             <!-- Volunteering-->
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Volunteering</h2>
                     <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Prokect Manager of Cigre WiE</p>
                 </div>
             </section>
             <!-- Presentations-->
             <section class="resume-section" id="presentations">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Presentations</h2>
                     <p>TBF.</p>
                 </div>
             </section>
             <!-- Blogs-->
             <section class="resume-section" id="blogs">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Blogs</h2>
                     <p>Coming soon!</p>
                 </div>
             </section>
