--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-R"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -166,7 +168,7 @@
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Volunteering</h2>
-                    <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Prokect Manager of Cigre WiE</p>
+                    <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Project Manager of Cigre WiE, data science instructor in Sister Analyst</p>
                 </div>
             </section>
             <!-- Presentations-->
