--- a/index.html
+++ b/index.html
@@ -129,36 +129,27 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-R"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-RStudio"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Time series analysis (ARIMA)
+                            Data Science: Time series and statistical analysis (SARIMAX), neural networks
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Python web scraping
+                            Python: Data insertion, manipulation, web scraping, forecasting
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Database queries
+                            Database: Queries and Requests from Python or R
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Testing
+                            Agile Development & Testing: AWS deployment 
                         </li>
                     </ul>
                 </div>
@@ -168,7 +159,7 @@
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Volunteering</h2>
-                    <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Project Manager of Cigre WiE, data science instructor in Sister Analyst</p>
+                    <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Project Manager of Cigre WiE, Data science instructor and mentor in Sister Analyst</p>
                 </div>
             </section>
             <!-- Presentations-->
