--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#volunteering">Volunteering</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#presentations">Presentations</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#blogs">Blogs</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
@@ -131,7 +131,7 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-RStudio"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-C"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -169,10 +169,10 @@
                     <p>TBF.</p>
                 </div>
             </section>
-            <!-- Blogs-->
-            <section class="resume-section" id="blogs">
+            <!-- Publications-->
+            <section class="resume-section" id="publications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Blogs</h2>
+                    <h2 class="mb-5">Publications</h2>
                     <p>Coming soon!</p>
                 </div>
             </section>
@@ -180,18 +180,18 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
+                    <ul class="fa-ul mb-0">                        
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Certified Associate Project Manager
+                            Best oral presentation: Awarded for presentation of the paper "Optimal joint strategy of wind battery storage unit for smoothing and trading of wind power" during the 3rd Annual Conference in Energy Storage and Its Applications, 3rd CDT-ESA-AC, 11–12 September 2018, Sheffield, UK.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Best oral presentation in..
+                            Certified Associate Project Manager: Awarded from the Project Management Institute in December 2017.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Scolarship in the Centre for Doctoral Training in Power Networks.
+                            EPSRC Doctoral Award: Awarded 4-year EPSRC scholarship for postgraduate research in power networks (September 2014).
                         </li>
                     </ul>
                 </div>
