--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                     <ul class="fa-ul mb-0">                        
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Best oral presentation: Awarded for presentation of the paper "Optimal joint strategy of wind battery storage unit for smoothing and trading of wind power" during the 3rd Annual Conference in Energy Storage and Its Applications, 3rd CDT-ESA-AC, 11–12 September 2018, Sheffield, UK.
+                            <b>Best oral presentation:</b> Awarded for presentation of the paper "Optimal joint strategy of wind battery storage unit for smoothing and trading of wind power" during the 3rd Annual Conference in Energy Storage and Its Applications, 3rd CDT-ESA-AC, 11–12 September 2018, Sheffield, UK.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Certified Associate Project Manager: Awarded from the Project Management Institute in December 2017.
+                            <b>Certified Associate Project Manager:</b> Awarded from the Project Management Institute in December 2017.
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            EPSRC Doctoral Award: Awarded 4-year EPSRC scholarship for postgraduate research in power networks (September 2014).
+                            </b>EPSRC Doctoral Award:</b> Awarded 4-year EPSRC scholarship for postgraduate research in power networks (September 2014).
                         </li>
                     </ul>
                 </div>
