--- a/index.html
+++ b/index.html
@@ -173,7 +173,20 @@
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
-                    <p>Coming soon!</p>
+                    <ol> 
+                         <li>
+                            ESC 
+                         </li>
+                         <li>
+                            Optimal valuation of wind energy projects co-located with battery storage, <a href="https://www.sciencedirect.com/science/article/pii/S0306261920316391">Applied Energy</a>, October 2020 (Citations: 3)
+                        </li>
+                         <li>
+                            Optimal joint strategy of wind battery storage unit for smoothing and trading of wind power, <a href="https://www.sciencedirect.com/science/article/pii/S1876610218305757">Energy Procedia</a>, September 2018 (Citations: 8)
+                        </li>
+                        <li>
+                            Stochastic wind speed modelling for estimation of expected wind power output, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0306261918309723">Applied Energy</a>, June 2018 (Citations:28)
+                        </li>                       
+                    </ol>
                 </div>
             </section>
             <!-- Awards-->
@@ -191,7 +204,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            </b>EPSRC Doctoral Award:</b> Awarded 4-year EPSRC scholarship for postgraduate research in power networks (September 2014).
+                            <b>EPSRC Doctoral Award:</b> Awarded 4-year EPSRC scholarship for postgraduate research in power networks (September 2014).
                         </li>
                     </ul>
                 </div>
