--- a/index.html
+++ b/index.html
@@ -175,7 +175,13 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
                          <li>
-                            ESC 
+                             Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467107744)/">Energy Systems Catapult</a>, March 2020.
+                         </li>
+                         <li>
+                             Storage and Flexibility Net Zero Series: Non-Battery Electrical Storage, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467110459)/">Energy Systems Catapult</a>, June 2020.
+                         </li>
+                         <li>
+                            Business cases for Wind Battery Storage, <a href="https://www.research.manchester.ac.uk/portal/files/188966471/FULL_TEXT.PDF">PhD Thesis</a>, June 2019.
                          </li>
                          <li>
                             Optimal valuation of wind energy projects co-located with battery storage, <a href="https://www.sciencedirect.com/science/article/pii/S0306261920316391">Applied Energy</a>, October 2020 (Citations: 3)
