--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
                     </div>
-                    <p class="lead mb-5">I'm an enthusiastic and committed research engineer, working at the R&D Centre of EDF Energy UK. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team. I also hold a PhD in battery storage, which was completed in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Research Engineer at the R&D Centre of EDF Energy UK. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -131,7 +131,7 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-C"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-linux"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -175,10 +175,10 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
                          <li>
-                             Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467107744)/">Energy Systems Catapult</a>, March 2020.
+                             Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467107744)/">Energy Systems Catapult</a>, June 2020.
                          </li>
                          <li>
-                             Storage and Flexibility Net Zero Series: Non-Battery Electrical Storage, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467110459)/">Energy Systems Catapult</a>, June 2020.
+                             Storage and Flexibility Net Zero Series: Non-Battery Electrical Storage, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467110459)/">Energy Systems Catapult</a>, May 2020.
                          </li>
                          <li>
                             Business cases for Wind Battery Storage, <a href="https://www.research.manchester.ac.uk/portal/files/188966471/FULL_TEXT.PDF">PhD Thesis</a>, June 2019.
