--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
-                            <p> Main tasks include: Engaging with various units across the business to gather data and project requirements, Responsible for developing optimisation Python tools to optimally value energy storage assets co-located with renewable generation, when participating in various electricity markets -- examples include day-ahead and intraday markets, frequency response markets and high non-energy cost avoidance, Workflow automation, integration and data management of existing forecasting tools (data scrapping, database record manipulation, shell/batch scripting, deployment in AWS, testing in operational conditions),  Data collection and analysis of electricity price profiles, used to better inform arbitrage strategies for energy storage assets.</p>
+                                <p> Main tasks include: </p>
+                                <ul> 
+                                    <li> Engaging with various units across the business to gather data and project requirements, bid prepartion and submission (BEIS, IUK)</li>
+                                    <li> Responsible for developing optimisation Python tools to optimally value energy storage assets co-located with renewable generation, when participating in various electricity markets -- examples include day-ahead and intraday markets, frequency response markets, balancing mechanism and high non-energy cost avoidance </li>
+                                    <li> Workflow automation, integration and data management of existing forecasting tools (data scrapping, database record manipulation, shell/batch scripting, deployment in AWS, testing in operational conditions)</li>
+                                    <li> Data collection and analysis of electricity price profiles, used to better inform arbitrage strategies for energy storage assets</li>
+                                </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
                     </div>
@@ -124,7 +130,7 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">Skills & Training</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
