--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Postgraduate Researcher</h3>
                             <div class="subheading mb-3">Centre for Doctoral Training in Power Networks, The University of Manchester</div>
-                            <p>TBF.</p>
+                            <ul>
+                                <li> Worked as part of the system integration and innovation team to develop the EnergyPath Operations simulation tool to assess system design choices and business models in dynamic future energy system architectures, in different operational time-frames and from local to national scale- Data analysis (Python) of the Future Energy Scenarios of National Grid aiming at informing future supply and demand figures of a merit-order dispatch model built to simulate electricity prices for future years </li>
+                                <li> Analysis of battery degradation data from the Consumer, Vehicle and Energy Integration project to investigate the profitability of the business case of second life batteries as part of the Innovate UK Technology Benchmarking project </li>
+                                <li> Examined if alternative (non-battery) storage technologies, like pumped heat, compressed or liquid air energy storage, can lead to reduced system costs in future electricity systems with high penetration of renewable sources, heat pumps and electric vehicles </li>
+                                <li> Worked as part of the Modern Energy Partners to construct dynamic time-of-use profiles and to develop relevant calculators to understand their effect on the bills of commercial sites </li>
+                                <li> Investigated the quantification and optimisation of multiple revenue streams (trading in the wholesale market, participation in the balancing mechanism, avoidance of high network charges, ancillary service provision) from batteries installed in non-domestic commercial sites (implemented with receding horizon model predictive control in MATLAB)</li>
+                                <li> Investigated if energy suppliers can reduce their costs by taking advantage of their customers’ flexibility through a heat-as-a-service model (implemented in MATLAB and Simulink)</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2014 - February 2019</span></div>
                     </div>
