--- a/index.html
+++ b/index.html
@@ -80,14 +80,6 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Modelling Analyst</h3>
                             <div class="subheading mb-3">Energy Systems Catapult</div>
-                            <p>TBF.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2019 - May 2020</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Postgraduate Researcher</h3>
-                            <div class="subheading mb-3">Centre for Doctoral Training in Power Networks, The University of Manchester</div>
                             <ul>
                                 <li> Worked as part of the system integration and innovation team to develop the EnergyPath Operations simulation tool to assess system design choices and business models in dynamic future energy system architectures, in different operational time-frames and from local to national scale- Data analysis (Python) of the Future Energy Scenarios of National Grid aiming at informing future supply and demand figures of a merit-order dispatch model built to simulate electricity prices for future years </li>
                                 <li> Analysis of battery degradation data from the Consumer, Vehicle and Energy Integration project to investigate the profitability of the business case of second life batteries as part of the Innovate UK Technology Benchmarking project </li>
@@ -95,6 +87,28 @@
                                 <li> Worked as part of the Modern Energy Partners to construct dynamic time-of-use profiles and to develop relevant calculators to understand their effect on the bills of commercial sites </li>
                                 <li> Investigated the quantification and optimisation of multiple revenue streams (trading in the wholesale market, participation in the balancing mechanism, avoidance of high network charges, ancillary service provision) from batteries installed in non-domestic commercial sites (implemented with receding horizon model predictive control in MATLAB)</li>
                                 <li> Investigated if energy suppliers can reduce their costs by taking advantage of their customers’ flexibility through a heat-as-a-service model (implemented in MATLAB and Simulink)</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2019 - May 2020</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Postgraduate Researcher</h3>
+                            <div class="subheading mb-3">Centre for Doctoral Training in Power Networks, The University of Manchester</div>
+                            <p> Ph.D. Research: Use of Stochastic Dynamic Optimisation for valuing battery storage to identify profitable business cases for wind farms co-located with battery storage </p>
+                            <p> Main responsibilities: </p>
+                            <ul>
+                                <li> Lead researcher into a multidisciplinary team in power systems with specialisation in optimal valuation of battery storage through dynamic programming techniques implemented in C++ </li>
+                                <li> Developed mathematical models for optimising the operation of battery storage for wind farms (in the short and longer term), while also considering and modelling uncertainty in wind speed and electricity prices </li>
+                                <li> Responsible for collection, visualisation and detailed statistical analysis of wind power, electricity price and battery degradation datasets (Python, R, Microsoft Excel) </li>
+                                <li> Regularly presenting to diverse audiences in conferences and during monthly group seminars </li>
+                                <li> Developed writing proficiency via publishing in international scientific journals / conferences </li>
+                            </ul>    
+                            <p>Taught programme (Oct. 2014 - Jun. 2015):</p>
+                            <ul>
+                                <li> Completed with Distinction (80%) </li>
+                                <li> Selected courses taken: Power System Modelling - Analysis – Economics - Stability, Smart Grids, Asset Management and Condition Monitoring , Stochastic Control Theory, Mathematical modelling in finance, Scientific computing, Megaprojects </li>
+                                <li> Developed the ability to work in multicultural teams through courseworks and group projects </li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2014 - February 2019</span></div>
