--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Teaching Assistant</h3>
                             <div class="subheading mb-3">School of Mathematics, The University of Manchester</div>
-                            <p>TBF.</p>
+                            <ul>
+                                <li> ‘Scientific Computing with C++’: I was the tutorial coordinator of classes of 80 students, supervising and guiding them towards coding and completing their scientific projects in C++. Projects included finite difference schemes, root-finding / interpolation / integration algorithms, numerical solution of ordinary / partial differential equations, sorting algorithms</li>
+                                <li> ‘Introduction to Linux’: I demonstrated the basic set of Scientific Linux shell commands (through terminal)</li>
+                                <li> ‘Introduction to Latex’: I introduced students to the Latex environment and demonstrated explanatory examples of how to insert text, equations, figures and tables into their latex documents</li>
+                                <li> ‘Introduction to Financial Mathematics’, ‘Mathematical Modelling in Finance’: Delivered tutorial classes, marked courseworks and assisted students in gaining insight into mathematical and financial concepts (Hedging strategies, Portfolio diversification) </li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2016 - February 2019</span></div>
                     </div>
