--- a/index.html
+++ b/index.html
@@ -135,18 +135,19 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">The University of Manchester</h3>
+                            <h3 class="mb-0">Centre for Doctoral Training in Power Networks, The University of Manchester</h3>
                             <div class="subheading mb-3">TBF</div>
-                            <div>PhD in Wind Battery Storage</div>
-                            <p>Taught programme with distinction</p>
+                            <div>PhD thesis in business models for Wind Battery Storage</div>
+                            <p>First-year taught programme completed with distinction</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2014 - June 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">National Technical University of Athens</h3>
-                            <div class="subheading mb-3">Diploma in Electrical and Computer Engineering</div>
-                            <p>GPA: 8.14/10.00</p>
+                            <div class="subheading mb-3">Diploma in Electrical and Computer Engineering (DEng)</div>
+                            <p> Major in Energy and Power Systems and passed successfully 60 courses (GPA: 8.14/10.00, first honours). Specialization fields: Renewable energy sources, Economic analysis of power systems, Energy storage. <br>
+                              In my dissertation with title “Pumped Storage Hydropower Technologies for Wind Energy Storage”, I analysed how fixed and variable speed pumped-hydro turbines affect the overall efficiency and the profit of a wind farm, when the wind farm and the pumped-hydro units are co-located. The aim was to reduce curtailment of wind energy. Supervisor: Prof. Costas Vournas (Grade 10.00/10.00). Software used: Matlab, Simulink </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2006 - September 2012</span></div>
                     </div>
