--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Centre for Doctoral Training in Power Networks, The University of Manchester</h3>
-                            <div class="subheading mb-3">TBF</div>
-                            <div>PhD thesis in business models for Wind Battery Storage</div>
-                            <p>First-year taught programme completed with distinction</p>
+                            <div class="subheading mb-3">PhD thesis in business models for Wind Battery Storage</div>
+                            <div>First-year taught programme completed with distinction</div>                       
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2014 - June 2019</span></div>
                     </div>
