--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">CDT in Power Networks, The University of Manchester</h3>
-                            <div class="subheading mb-3">PhD thesis in business models for Wind Battery Storage. In my Doctor of Philosophy, I utilised Stochastic Dynamic Optimisation for valuing battery storage to identify profitable business cases for wind farms co-located with battery storage.</div>
-                            <div>First-year taught programme completed with distinction.</div>                       
+                            <div class="subheading mb-3">PhD thesis in business models for Wind Battery Storage </div>
+                            <div>In my Doctor of Philosophy, I utilised Stochastic Dynamic Optimisation for valuing battery storage to identify profitable business cases for wind farms co-located with battery storage. <br> <br> First-year taught programme completed with distinction.</div>                       
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2014 - June 2019</span></div>
                     </div>
