--- a/index.html
+++ b/index.html
@@ -184,6 +184,17 @@
                             Agile Development & Testing: AWS deployment 
                         </li>
                     </ul>
+                    <div class="subheading mb-3">Languages</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Certificate of Proficiency in English (Common European Framework Level C2)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Diplôme d'études en langue française- 2nd Degree Units A3-A4 (Common European Framework Level B1)
+                        </li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
@@ -252,7 +263,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>I am a yoga addict, and I like walking and running in sea and residential areas, as well as visiting bookshops!</p>
-                    <p class="mb-0">When forced indoors, I knit or spent my free time exploring the latest technology advancements in energy storage or data science.</p>
+                    <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest technology advancements in energy storage or data science.</p>
                 </div>
             </section>
             <hr class="m-0" />
