--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills & Training</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -184,6 +184,7 @@
                             Agile Development & Testing: AWS deployment 
                         </li>
                     </ul>
+                    <br>
                     <div class="subheading mb-3">Languages</div>
                     <ul class="fa-ul mb-0">
                         <li>
