--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>I am a yoga addict, and I like walking and running in sea and residential areas, as well as visiting bookshops!</p>
-                    <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest technology advancements in energy storage or data science.</p>
+                    <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>
+                    <span class="d-none d-lg-block"><img src="assets/img/interests.jpg" alt="..." /></span>
                 </div>
             </section>
             <hr class="m-0" />
