--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>
                     <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
                         <span class="d-block d-lg-none">Interests</span>
-                        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/interests.jpg" alt="..." /></span>
+                        <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
                     </a>
                 </div>
             </section>
