--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>
                     <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
                         <span class="d-block d-lg-none">Interests</span>
-                        <img src="assets/img/interests.jpg" alt="interests" />
+                        <img src="assets/img/interests.jpg" alt="interests">
                     </a>
                 </div>
             </section>
