--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>I am a yoga addict and I like walking and running in sea and residential areas, as well as visiting bookshops and data meetups!</p>
                     <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>
-                    <img src="assets/img/interests.jpg" alt="interests">
+                    <img src="assets/img/interests.jpg" alt="interests" width="500" height="600">
                     </a>
                 </div>
             </section>
