--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </ol>
                     <p>Data conferences and meetups
                     <ol>
-                        <li> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6736327941032083456/" Data analytics and workflow automation in Smart Energy Systems</a>, European Data Science Conference, November 2020</li>
+                        <li> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6736327941032083456/"> Data analytics and workflow automation in Smart Energy Systems</a>, European Data Science Conference, November 2020</li>
                         <li> Extracting and visualising NASA’s MERRA-2 data, PyDataMCR, April 2020 </li>
                     </ol>
                 </div>
