--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
-                        <li> Benefits of joining a professional institution, Cigre UK NGN for COP26-Youth Engineering Conference, September 2021. Please find the podcast below:
+                        <li> Benefits of joining a professional institution, Cigre UK NGN for COP26-Youth Engineering Conference, September 2021. Please find the podcast below:<br><br>
                             <video width="320" height="240" controls>
                                 <source src="GYECC_CIGRE_Benefits from a professional organisation.mp4" type="video/mp4">
                                 <source src="movie.ogg" type="video/ogg">
