--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@
                     <ol>
                         <li> Benefits of joining a professional institution, Cigre UK NGN for COP26-Youth Engineering Conference, September 2021. Please find the podcast below:<br><br>
                             <video width="320" height="240" controls>
-                                <source src="GYECC_CIGRE_Benefits from a professional organisation.mp4" type="video/mp4">
-                                <source src="movie.ogg" type="video/ogg">
+                                <source src="audio/GYECC_CIGRE_Benefits from a professional organisation.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                             </video>
                         <li> Benefits of joining IEEE PES, International PES Day, IEEE UK&I PES SBS, April 2020
